# pocket-cache

./: README.md  pyproject.toml  requirements.txt
pocketcache_firmware/: config_manager.py  displayhat_main.py  main.py  qr.py  router.py  state.py  theme.py  ui.py
pocketcache_firmware/adapters/: displayhatmini_adapter.py  pygame_adapter.py
pocketcache_firmware/data/: field_guide.txt  first_aid.txt
pocketcache_firmware/screens/: about.py  alert.py  base.py  boot.py  game_2048.py  game_blackjack.py  game_chess.py  game_dice.py  game_life.py  game_mines.py  game_tetris.py  games_menu.py  library.py  menu.py  portal.py  reader.py  screensaver.py  settings.py  status.py  sudoku.py  wifi.py
portal/: hello.html  index.html  library.html  map.html  server.py  status.html
portal/static/: map.js  styles.css
scripts/: install-autoboot.sh  install-portal-demo.sh  run-portal-demo.sh  setup-dev-hotspot.sh  setup-hotspot.sh  uninstall-autoboot.sh
systemd/: pocket-cache-firmware.service  pocket-cache-portal.service
